[update] Updated response model
