# docs/swagger.json
@@ -480,7 +480,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.customerErrData"
+                    "$ref": "#/definitions/model.EmptyObject"
                 },
                 "message": {
                     "type": "string",
@@ -489,6 +489,10 @@
                 "success": {
                     "type": "boolean",
                     "example": false
+                },
+                "timestamp": {
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05.000Z"
                 }
             }
         },
@@ -496,7 +500,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.customerData"
+                    "$ref": "#/definitions/model.Customer"
                 },
                 "message": {
                     "type": "string",
@@ -505,6 +509,10 @@
                 "success": {
                     "type": "boolean",
                     "example": true
+                },
+                "timestamp": {
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05.000Z"
                 }
             }
         },
@@ -512,7 +520,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.emptySuccessData"
+                    "$ref": "#/definitions/model.EmptyObject"
                 },
                 "message": {
                     "type": "string",
@@ -521,6 +529,10 @@
                 "success": {
                     "type": "boolean",
                     "example": false
+                },
+                "timestamp": {
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05.000Z"
                 }
             }
         },
@@ -528,7 +540,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.token"
+                    "$ref": "#/definitions/model.Token"
                 },
                 "message": {
                     "type": "string",
@@ -537,38 +549,10 @@
                 "success": {
                     "type": "boolean",
                     "example": false
-                }
-            }
-        },
-        "response.customerData": {
-            "type": "object",
-            "properties": {
-                "object": {
-                    "$ref": "#/definitions/model.Customer"
-                }
-            }
-        },
-        "response.customerErrData": {
-            "type": "object",
-            "properties": {
-                "object": {
-                    "$ref": "#/definitions/model.EmptyObject"
-                }
-            }
-        },
-        "response.emptySuccessData": {
-            "type": "object",
-            "properties": {
-                "object": {
-                    "$ref": "#/definitions/model.EmptyObject"
-                }
-            }
-        },
-        "response.token": {
-            "type": "object",
-            "properties": {
-                "object": {
-                    "$ref": "#/definitions/model.Token"
+                },
+                "timestamp": {
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05.000Z"
                 }
             }
         }
